--- a/course.yml
+++ b/course.yml
@@ -1,7 +1,5 @@
 title            : RBootcamp3
-description      : You will review t-tests, correlation and regression. Slides Part 1 download here http://cl.indiana.edu/~obscrivn/docs/DavisBoot3.pptx
-Slides Part 2 download here - https://www.slideshare.net/obscrivn/rbootcamp-day3-part2
-Code download here http://cl.indiana.edu/~obscrivn/docs/DavisBoot3.R 
+description      : You will review t-tests, correlation and regression. Slides Part 1 download here    http://cl.indiana.edu/~obscrivn/docs/DavisBoot3.pptx      Slides Part 2 download here - https://www.slideshare.net/obscrivn/rbootcamp-day3-part2    Code download here http://cl.indiana.edu/~obscrivn/docs/DavisBoot3.R 
 university       : DataCamp
 difficulty_level : 2
 time_needed      : 1 hour
