--- a/course.yml
+++ b/course.yml
@@ -1,5 +1,8 @@
 title            : RBootcamp3
 description      : You will review t-tests, correlation and regression. Slides Part 1 download here    http://cl.indiana.edu/~obscrivn/docs/DavisBoot3.pptx      Slides Part 2 download here - https://www.slideshare.net/obscrivn/rbootcamp-day3-part2    Code download here http://cl.indiana.edu/~obscrivn/docs/DavisBoot3.R download CSV file  - http://cl.indiana.edu/~obscrivn/docs/categoricaldata.csv
-university       : DataCamp
+university       : Indiana University
+instructors: 
+   - obscrivn@indiana.edu
+   -  majdavis@iu.edu
 difficulty_level : 2
 time_needed      : 1 hour
